fix(app): fix layout breaking when a scrollbar is rendered

--- a/src/renderer/src/components/app-main/AppMain.module.scss
+++ b/src/renderer/src/components/app-main/AppMain.module.scss
@@ -1,5 +1,5 @@
 .appMain {
-   overflow-y: auto;
+   overflow-y: overlay;
 
    background: var(--BG);
 }
